Fix animation flickering (#37)

--- a/ui/src/components/AnimatedText.css
+++ b/ui/src/components/AnimatedText.css
@@ -9,7 +9,7 @@
 #animatedText p {
     margin: 0;
     text-align: right;
-    animation: 1.2s ease-in 0s fadein; 
+    animation: 0.4s ease-in 0s fadein; 
 }
 
 @keyframes fadein {
